changed buttons with queryselector

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-  <h3>Directions: The challenges to fix the game and make it better! </h4>
+  <h4>Directions: The challenges to fix the game and make it better! </h4>
   <h4>
     Click a button to make other buttons disappear and reappear.
   </h4>
-
   <h4>
     Can you make all the buttons disappear except the blue button?
   </h4>
+  
   <button class="one">1</button>
   <button class="common two">2</button>
   <button class="common three">3</button>
@@ -26,6 +26,7 @@
   <button class="common seven">7</button>
   <button class="common eight">8</button>
   <br>
+  <button class="refresh">Refresh</button>
   <a class="lol" href="https://replit.com/@MichaelOppong/ALFT-M6L1-Hidden-Bonus"> You found the secret link! </a>
   <script src="script.js"></script>
 </body>
